tests/NormalTests/paczka1/fuzzy1/55334871.err
Error in line 2: Dji6 A502 97,1
Error in line 26: J3txe95XjL1 S260 73,1
Error in line 28: A22 S422 10,1
Error in line 27: J3txe95XjL1 S422 2,4
Error in line 30: TmAMV S422 77,6
Error in line 18: Dji6 A22 0,3
Error in line 37: TmAMV A22 187,7
